--- a/styles.css
+++ b/styles.css
@@ -4,13 +4,14 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    gap: 4px;
-    max-width: 950px;
+    /* gap: 4px; */
+    max-width: 900px;
+    max-height: 900px;
 }
 
 .square {
     background: pink;
-    width:50px; 
-    height:50px; 
-    border:2px solid black;
+    width: 50px; 
+    height: 50px; 
+    border: 2px solid black;
 }
